1. Load and Prepare Your Dataset 2. Model Compilation and Training 3. Define a Default Batch Size

--- a/Medicine Recommendation System/medicine_recommendation_system.ipynb
+++ b/Medicine Recommendation System/medicine_recommendation_system.ipynb
@@ -36,6 +36,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
+        "import tensorflow as tf\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n",
         "\n",
@@ -2166,8 +2167,8 @@
     {
       "cell_type": "code",
       "source": [
-        "X = dataset.drop('prognosis' , axis = 1)\n",
-        "y = dataset['prognosis']"
+        "X = dataset.drop('prognosis' , axis = 1) #(symptoms)\n",
+        "y = dataset['prognosis'] #(disease names)"
       ],
       "metadata": {
         "id": "Pn8L4BepNA4k"
@@ -2178,9 +2179,13 @@
     {
       "cell_type": "code",
       "source": [
-        "le = LabelEncoder()\n",
-        "le.fit(y)\n",
-        "Y = le.transform(y)"
+        "# Encode the labels if they are categorical\n",
+        "label_encoder = LabelEncoder()\n",
+        "label_encoder.fit(y)\n",
+        "y_encoded = label_encoder.fit_transform(y)\n",
+        "\n",
+        "# Split the dataset into training and validation sets\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X, y_encoded, test_size=0.2, random_state=123)"
       ],
       "metadata": {
         "id": "0_S39-raNCPE"
@@ -2191,7 +2196,7 @@
     {
       "cell_type": "code",
       "source": [
-        "Y"
+        "y_encoded"
       ],
       "metadata": {
         "colab": {
@@ -4250,6 +4255,34 @@
     {
       "cell_type": "code",
       "source": [
+        "# Set a default batch size\n",
+        "batch_size = 32\n",
+        "\n",
+        "# Convert the data into TensorFlow datasets\n",
+        "train_ds = tf.data.Dataset.from_tensor_slices((X_train.values, y_train)).batch(batch_size)\n",
+        "val_ds = tf.data.Dataset.from_tensor_slices((X_val.values, y_val)).batch(batch_size)"
+      ],
+      "metadata": {
+        "id": "vHNihm-FNiK8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Optionally, if you need to shuffle the training dataset\n",
+        "train_ds = train_ds.shuffle(buffer_size=len(X_train))"
+      ],
+      "metadata": {
+        "id": "TUdl07WUNnsd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Define a dictionary of models to evaluate\n",
         "models = {\n",
         "    'SVC': SVC(kernel='linear'),\n",
@@ -4501,6 +4534,60 @@
           "execution_count": 21
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Compile Model"
+      ],
+      "metadata": {
+        "id": "VoP3M18jLJ-5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compile the model\n",
+        "model.compile(optimizer='adam',\n",
+        "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+        "              metrics=['accuracy'])"
+      ],
+      "metadata": {
+        "id": "YujDmMCILM7K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the number of epochs for training\n",
+        "epochs = 10\n",
+        "\n",
+        "# Fit the model on the training dataset and validate on the validation dataset\n",
+        "history = model.fit(\n",
+        "    train_ds,  # Your training dataset\n",
+        "    validation_data=val_ds,  # Your validation dataset\n",
+        "    epochs=epochs\n",
+        ")\n",
+        "\n",
+        "# Optionally print the training history\n",
+        "print(\"Training completed.\")\n",
+        "print(\"Training Accuracy:\", history.history['accuracy'][-1])\n",
+        "print(\"Validation Accuracy:\", history.history['val_accuracy'][-1])"
+      ],
+      "metadata": {
+        "id": "d1-reoPVLQQl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "MfsjeGtELQ5X"
+      }
     },
     {
       "cell_type": "code",
