1. Plots of loss and accuracy for your training and validation sets

--- a/Medicine Recommendation System/medicine_recommendation_system.ipynb
+++ b/Medicine Recommendation System/medicine_recommendation_system.ipynb
@@ -4562,7 +4562,7 @@
       "cell_type": "code",
       "source": [
         "# Define the number of epochs for training\n",
-        "epochs = 10\n",
+        "epochs = 20\n",
         "\n",
         "# Fit the model on the training dataset and validate on the validation dataset\n",
         "history = model.fit(\n",
@@ -4578,6 +4578,59 @@
       ],
       "metadata": {
         "id": "d1-reoPVLQQl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Plots of loss and accuracy for your training and validation sets"
+      ],
+      "metadata": {
+        "id": "jJ29kd8pO6Qd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extract metrics from the training history\n",
+        "acc = history.history['accuracy']\n",
+        "val_acc = history.history['val_accuracy']\n",
+        "\n",
+        "loss = history.history['loss']\n",
+        "val_loss = history.history['val_loss']\n",
+        "\n",
+        "# Define the range of epochs\n",
+        "epochs_range = range(epochs)\n",
+        "\n",
+        "# Create a figure with subplots for accuracy and loss\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "\n",
+        "# Plot Training and Validation Accuracy\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.plot(epochs_range, acc, label='Training Accuracy', color='blue')\n",
+        "plt.plot(epochs_range, val_acc, label='Validation Accuracy', color='orange')\n",
+        "plt.legend(loc='lower right')\n",
+        "plt.title('Training and Validation Accuracy')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Accuracy')\n",
+        "\n",
+        "# Plot Training and Validation Loss\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.plot(epochs_range, loss, label='Training Loss', color='blue')\n",
+        "plt.plot(epochs_range, val_loss, label='Validation Loss', color='orange')\n",
+        "plt.legend(loc='upper right')\n",
+        "plt.title('Training and Validation Loss')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Loss')\n",
+        "\n",
+        "# Display the plots\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "2QaVNhe4O6xh"
       },
       "execution_count": null,
       "outputs": []
