--- a/Medicine Recommendation System/medicine_recommendation_system.ipynb
+++ b/Medicine Recommendation System/medicine_recommendation_system.ipynb
@@ -4566,8 +4566,8 @@
         "\n",
         "# Fit the model on the training dataset and validate on the validation dataset\n",
         "history = model.fit(\n",
-        "    train_ds,  # Your training dataset\n",
-        "    validation_data=val_ds,  # Your validation dataset\n",
+        "    train_ds,  # training dataset\n",
+        "    validation_data=val_ds,  # validation dataset\n",
         "    epochs=epochs\n",
         ")\n",
         "\n",
@@ -4585,7 +4585,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Plots of loss and accuracy for your training and validation sets"
+        "Plots of loss and accuracy for training and validation sets"
       ],
       "metadata": {
         "id": "jJ29kd8pO6Qd"
